Fixed z-index and removed swipe events

--- a/web/resources/styles/style.css
+++ b/web/resources/styles/style.css
@@ -13014,7 +13014,7 @@ a.btn, .swal2-container .swal2-popup a.swal2-confirm, .swal2-container .swal2-po
   position: fixed;
   bottom: 15px;
   right: 15px;
-  z-index: 3;
+  z-index: 6; /*  added to  place allbutton above highlight layer*/
   text-align: right;
 }
 
